# mouse_client

./: CMakeLists.txt  README.md  app_icon.rc  mouse_stats.txt  resources.qrc
media/: mouse.aep  mouse.psd
res/: mouse_thales.txt
scripts/: 1.read_mouse_motion_data.py  2.plot_data.py
scripts/sample_motion_data/: serial_output_20250719_000437.txt  serial_output_20250831_125709.txt
src/: com_port_sample.cc  main.cc  qt_sample  qt_sample.cc
src/include/: com_port.hpp  gui.hpp  logic.hpp
src/windows/: com_port.cc  gui.cc  logic.cc
